--- a/tese.tex
+++ b/tese.tex
@@ -94,7 +94,7 @@ Engenharia da Universidade do Porto}
 \chapter{Experimental Results}
 \input{results}
 
-\chapter{Conclusions and further work}
+\chapter{Conclusions and Further Work}
 \input{conclusions}
 
 \appendix
