--- a/results.tex
+++ b/results.tex
@@ -100,7 +100,7 @@ In order to compare the YapTab tabling engine with the SLG-WAM we used the follo
 
 For each benchmark, we used variant-based tabling and then subsumption-based tabling.
 Next, we computed the execution time and compared the speedups obtained ($T_{variant} / T_{subsumptive}$) for
-each engine. The times presented next are the average of 2 runs. Given that YapTab's implementation
+each engine. The times presented next are the average of 3 runs. Given that YapTab's implementation
 is largely based on XSB's code to implement the subsumption mechanisms,
 we expect the speedups to be very similar. Some potential differences between them will arise because
 of certain characteristics, namely: the way they implement the tabling algorithms, the WAM engine itself,
@@ -119,16 +119,16 @@ show the full details, with times and speedups for YapTab and SLG-WAM.
     & \textbf{\textit{\small{Average Speedup}}} & \textbf{\textit{\small{Average Speedup}}} \\
    \hline
    \hline
-left\_first & 0.76 & \textbf{0.95} \\
-left\_last & 0.76  & \textbf{1.00} \\
-right\_first & \textbf{1.03} & 0.92 \\
-right\_last & \textbf{1.07} & 0.98 \\
-double\_first & 1.25 & \textbf{1.46} \\
-double\_last & 1.34 & \textbf{1.35} \\
-samegen & \textbf{292.66} & 0.93 \\
-genome & \textbf{596.17} & 595.55 \\
-reach\_first  & \textbf{0.95} & 0.89 \\
-reach\_last  & \textbf{0.98} & 0.95 \\
+left\_first & 0.78 & \textbf{1.02} \\
+left\_last & 0.77  & \textbf{0.96} \\
+right\_first & \textbf{1.01} & \textbf{1.01} \\
+right\_last & 0.94 & \textbf{1.07} \\
+double\_first & 1.37 & \textbf{1.48} \\
+double\_last & 1.31 & \textbf{1.40} \\
+samegen & \textbf{339.76} & 1.03 \\
+genome & 559.54 & \textbf{648.51} \\
+reach\_first  & \textbf{0.96} & 0.94 \\
+reach\_last  & \textbf{0.97} & 0.90 \\
 \hline
 \hline
 \end{tabular}
@@ -136,27 +136,27 @@ reach\_last  & \textbf{0.98} & 0.95 \\
 \label{tbl:results_overview}
 \end{table}
 
-The first thing we note is that,  YapTab has a better speedup than SLG-WAM in 4 benchmarks, while in 6 of
-them SLG-WAM wins. While SLG-WAM wins here, the speedups for the two engines are very similar, which proves
+The first thing we note is that,  YapTab has a better speedup than SLG-WAM in 6 benchmarks, while in 3 of
+them SLG-WAM wins. In most of the benchmarks, the speedups for the two engines are very similar, which proves
 that our integration efforts were  largely successful. However, for the \texttt{samegen} benchmark the
-speedups are not very similar at all, the SLG-WAM engine has an average speedup of 292.66
-and YapTab only 0.93. This happens because the performance of the variant-based version of SLG-WAM
+speedups are not very similar at all, the SLG-WAM engine has an average speedup of 339.76
+and YapTab only 1.03. This happens because the performance of the variant-based version of SLG-WAM
 performs very poorly against YapTab, which explains such big differences (see Table~\ref{tbl:result_detail_others}
 for details).
 
 The programs \texttt{left\_first} and \texttt{left\_last} do not generate any subsumed consumer,
 therefore they are good benchmarks to assess the overhead of using the subsumption mechanisms. For YapTab,
-the overhead is minimal with an average speedup of 0.95 for the \texttt{left\_first} program. Surprisingly, for the
-\texttt{left\_last} program the speedup is equal to 1, that is, both variant-based and subsumptive-based
-engines have the same execution time. The SLG-WAM behavior for these two programs is clearly worst, with an average
-speedup of 0.76 for both programs.
+the overhead is minimal with an average speedup of 0.96 for the \texttt{left\_last} program. Surprisingly, for the
+\texttt{left\_first} program the speedup is 1.02, that is, the subsumptive-based engine performed better
+than the variant-based engine. The SLG-WAM behavior for these two programs is clearly worst, with an average
+speedup of 0.78 and 0.77 for \texttt{left\_first} and \texttt{left\_last}, respectively.
 
 The programs \texttt{right\_first} and \texttt{right\_last} do generate subsumed consumers,
-as many as the number of \texttt{edge/2} facts. Notably, only the SLG-WAM
+as many as the number of \texttt{edge/2} facts. Notably, only YapTab
 achieves an average speedup bigger than 1 for both programs. These programs show poor speedups because simple facts
 are faster to evaluate than to use the time stamped trie to collect relevant answers.
 In particular, the binary tree graph configuration with the \texttt{right\_first} and \texttt{right\_last} programs
-in YapTab has a very poor speedup of 0.77 and 0.31, respectively, which is clearly influencing the average speedups.
+in YapTab has a very poor speedup of 0.93 and 0.33, respectively, which is clearly influencing the average speedups.
 (see Table~\ref{tbl:result_detail_path}).
 In the \texttt{right\_first} benchmark, the time stamped index is created right at
 the beginning of the program, when the time stamped trie is still empty, and maintained thereafter, but,
@@ -170,17 +170,17 @@ The operation of creating the time stamped index
 and sorting each trie node at each trie level can be very costly when a large number of nodes exist.
 By experimentation we found that it seems more efficient to maintain the index as the answer trie is being expanded.
 
-For the \texttt{double\_first} and \texttt{double\_last} we have attained speedups between 1.25 and 1.46
+For the \texttt{double\_first} and \texttt{double\_last} we have attained speedups between 1.31 and 1.48
 for both YapTab and SLG-WAM. These benchmarks are more computationally expensive given that they create more
 dependencies. However, in subsumption-based tabling, the number of dependencies is reduced 
 and thus no code is executed.
 
 The \texttt{genome} program shows the best speedup results, with an impressive average speedup of 
-595.55 for YapTab. In this program, the subgoal \texttt{path(2,X)} and \texttt{path(1,X)} are called
+648.51 for YapTab. In this program, the subgoal \texttt{path(2,X)} and \texttt{path(1,X)} are called
 very early in the evaluation which makes all further subgoals calls to \texttt{path/2} that are subsumed by these
 goals as consumers.
 
-For the model checking programs, the results were not so good with very close speedups for YapTab and SLG-WAM.
+For the model checking programs, the results were not so good with close speedups for YapTab and SLG-WAM.
 
 \input{tables_path}
 \input{tables_model_checking}
@@ -258,27 +258,27 @@ We used the following benchmarks:
 \end{itemize}
 
 We timed the execution of the benchmarks for the RCS engine and then the execution time
-for the subsumptive and variant-based engines of both YapTab and SLG-WAM. In the next tables,
+for the subsumptive and variant-based engines of both YapTab and SLG-WAM. All execution times are
+the average of 3 runs. For each table,
 we present the execution time of the RCS engine in milliseconds and the relative time
 of the other engines by computing the value $T_{engine} / T_{RCS}$.
 If the value is lesser than 1.0 then RCS performs worse, otherwise if the value is greater than
 1.0 then RCS performs better. At the end of each table, we present the average values for
 each engine.
 
-Tables~\ref{tbl:overhead_detail_tst1}, \ref{tbl:overhead_detail_tst2} and \ref{tbl:overhead_detail_model}
-show the detailed results for the programs we use to measure the overhead.
-Table~\ref{tbl:overhead_overview} shows the average values computed for each benchmark program
-for call subsumption in the SLG-WAM and in the YapTab engine.
+Table~\ref{tbl:overhead_overview} shows the average overhead values computed for each benchmark program
+for call subsumption in the SLG-WAM and in the YapTab engine. The detailed results are presented
+in Tables~\ref{tbl:overhead_detail_tst} and \ref{tbl:overhead_detail_model}.
 By analyzing the results we can see that YapTab with RCS performs worse
-than YapTab with subsumptive-based tabling in most cases, only the
+than YapTab with subsumptive-based tabling in most cases, and only the
 programs \texttt{right\_first} and the \texttt{right\_last} program show better results,
-while the \texttt{left\_first} program has comparable execution times.
+while the \texttt{left\_first} and \texttt{left\_last} programs have very comparable execution times.
 In theory, these benchmarks should not run faster, but cache effects and other
 conditions could affect positively the execution time of these programs.
 
 The average values presented in Table~\ref{tbl:overhead_overview} show that
-RCS is very competitive against XSB, because it is, in average, 21\% slower than RCS. More
-importantly, when comparing RCS to YapTab with traditional call subsumption, RCS performs 5\% slower,
+RCS is very competitive against SLG-WAM, because SLG-WAM is in average 21\% slower than RCS. More
+importantly, when comparing RCS to YapTab with traditional call subsumption, RCS performs 4\% slower,
 which shows that RCS adds a very small overhead when executing programs that do not benefit from the
 new evaluation model.
 
@@ -291,18 +291,18 @@ new evaluation model.
     & \textbf{\textit{\small{Sub / Retro}}} & \textbf{\textit{\small{Sub / Retro}}} \\
    \hline
    \hline
-   left\_first & 1.29 & \textbf{1.00} \\
-   left\_last &  1.26  & 0.92 \\
-   right\_first & 0.92 & \textbf{1.06} \\
-   right\_last & 1.00 & \textbf{1.08} \\
-   double\_first & 1.11 & 0.89 \\
-   double\_last & 1.03 & 0.87 \\
-   samegen & 0.78 & 0.91 \\
-   reach\_first  &  1.801  & 0.93 \\
-   reach\_last  &  1.703  & 0.92 \\
+   left\_first & 1.29 & 0.99 \\
+   left\_last &  1.26  & 0.98 \\
+   right\_first & 0.95 & \textbf{1.05} \\
+   right\_last & 1.03 & \textbf{1.08} \\
+   double\_first & 1.05 & 0.87 \\
+   double\_last & 1.06 & 0.87 \\
+   samegen & 0.75 & 0.90 \\
+   reach\_first  &  1.78  & 0.96 \\
+   reach\_last  &  1.73  & 0.96 \\
 \hline
 \hline
-\textit{Average} &  1.21 &  0.95 \\
+\textit{Average} &  1.21 &  0.96 \\
 \hline
 \hline
 \end{tabular}
@@ -310,8 +310,8 @@ new evaluation model.
 \label{tbl:overhead_overview}
 \end{table}
 
-\input{tables_retro_overhead_model}
 \input{tables_retro_overhead_tst}
+\input{tables_retro_overhead_model}
 
 \subsection{RCS Gains}
 
@@ -346,6 +346,7 @@ The programs we used for these experiments are the following:
 
 As the tables of the previous section, we present the results with the execution time of the retroactive-based
 engine, along with the relative results for the SLG-WAM and YapTab engines, with both variant and subsumptive checks.
+Execution times are an average of 3 runs.
 In tables~\ref{tbl:results_detail_gain_tst}, \ref{tbl:results_detail_gain_model} and \ref{tbl:results_detail_gain_fib}
 we show the detailed results of the experiments. Table~\ref{tbl:results_gain_overview} presents the average values of
 each program.
@@ -359,16 +360,17 @@ each program.
     & \textbf{\textit{\small{Sub / Retro}}} & \textbf{\textit{\small{Sub / Retro}}} \\
    \hline
    \hline
+   
 left\_first & 1.19 & 0.95 \\
-left\_last & 0.76  & 0.88 \\
-double\_first & 1.20 & \textbf{1.13} \\
-double\_last & 1.14 & \textbf{1.14} \\
-genome & 0.75 & 0.92 \\
-reach\_first  & 3.28 & \textbf{1.63} \\
-reach\_last  & 3.25 & \textbf{1.85} \\
+left\_last & 1.23  & 0.90 \\
+double\_first & 1.17 & \textbf{1.09} \\
+double\_last & 1.14 & \textbf{1.10} \\
+genome & 0.62 & 0.74 \\
+reach\_first  & 3.52 & \textbf{1.76} \\
+reach\_last  & 3.34 & \textbf{1.87} \\
 flora & 0.29 & \textbf{1.17} \\
-fib & 1.75 & \textbf{2.19} \\
-big & 17.18 & \textbf{13.60} \\
+fib & 1.64 & \textbf{2.02} \\
+big & 17.72 & \textbf{13.66} \\
 \hline
 \hline
 \end{tabular}
@@ -382,12 +384,12 @@ clause (\texttt{left\_last} and \texttt{double\_last}). In the \texttt{first} ve
 generates answers before reaching the general subgoal, while in the \texttt{last} versions, the general subgoal
 is found right at the beginning. Therefore, the \texttt{first} versions should, in principle, attain more performance,
 because they waste less time executing the subsumed subgoal. The results for the \texttt{left} versions of the
-\texttt{path/2} program attest this, with speedups of 0.95 and 0.88 for the \texttt{left\_first} and
+\texttt{path/2} program attest this, with speedups of 0.95 and 0.90 for the \texttt{left\_first} and
 \texttt{left\_last} versions, respectively. Surprisingly, the \texttt{double} version has the opposite behavior.
 
 Another important conclusion we can make from the results is that RCS may not show performance gains, even if the
-programs can, in theory, take advantage of it. In our experiments, only the programs \texttt{double\_left},
-\texttt{double\_last}, \texttt{reach\_left} and \texttt{reach\_last} show, in average, performance improvements.
+programs can, in theory, take advantage of it. In our experiments, only the programs \texttt{left\_first},
+\texttt{left\_last} and \texttt{genome} show, in average, worse performance.
 
 We argue that the speedup of using RCS is highly dependent on the nature of the program.
 The \texttt{left} version
@@ -396,30 +398,29 @@ execution of simple \texttt{edge/2} facts does not offset the cost of using the 
 for the subsumed subgoal and
 the cost of pruning the computation itself. In other words, using subsumptive-based tabling for this program is
 advantageous because the cost of executing predicate clauses is less than maintaining the time stamped index.
-Therefore, the time that would be wasted by executing pruned code should be bigger than the time wasted
-on manipulating the STST.
+Hence, for RCS to show improvements, the time that is wasted by executing pruned code should be greater than the
+time spent manipulating the STST.
 
 The model checking programs, \texttt{reach\_left} and \texttt{reach\_last}, are much more complex than the \texttt{path/2}
 programs, and thus show much larger improvements. For the \texttt{reach\_last} program with the \texttt{leader} model,
-we obtain a good speedup of 2.03. Also, the \texttt{flora} program also shows improvements with a speedup of 1.17 over
-traditional call subsumption in YapTab. These complex benchmarks show that using RCS has the potential to speedup the
+we obtain a good speedup of 2.16. Also, the \texttt{flora} program also shows improvements with a speedup of 1.17 over
+traditional call subsumption in YapTab. These complex benchmarks show that RCS has the potential to speedup the
 execution on this type of programs.
 
 The \textbf{fib} program shows a considerable average speedup of 2.19 for YapTab with call subsumption.
-We can see that, for different parameters, the speedup is maintained because the execution time of the pruned subsumed
+We can see that, for different parameters, the speedup is identical because the execution time of the pruned subsumed
 subgoal is more or less equal to that of the subsuming subgoal. For the \textbf{big} program, where multiple
-subsumed subgoals are pruned, we can see that, as the number of pruned subsumed subgoals increase, the speedup
-also increases, reaching a maximum of 21.29 for YapTab. An interesting observation for the \textbf{big} program is
+subsumed subgoals are pruned, we can see that as the number of pruned subsumed subgoals increases, the speedup
+also increases, reaching a maximum of 21.24 for YapTab. An interesting observation for the \textbf{big} program is
 that the execution time for retroactive-tabling stays the same, even if the number of subsumed subgoals to prune
 increase.
 
-Even if the \texttt{path/2} programs, in average, do not show improvements, for some data sets
-these programs can obtain good speedups. For example, the binary tree configuration can reach speedups of 1.62 and 1.63. The grid configuration can reach speedups of 1.10 for the \texttt{left\_first} benchmark, and the \texttt{genome/1}
-program reaches a speedup of 2.0 for the grid graph.
+Even if the \texttt{path/2} programs, in average, do not show considerable improvements, for some data sets
+these programs can obtain good speedups, for example, the binary tree configuration can reach a speedup of 1.61.
 
+\input{tables_gain_tst}
 \input{tables_gain_model}
 \input{tables_gain_fib}
-\input{tables_gain_tst}
 
 \section{STST Table Space Analysis}
 
