--- a/tables_path.tex
+++ b/tables_path.tex
@@ -8,42 +8,45 @@
      \multicolumn{2}{c|}{} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} & \textbf{\textit{Var}} & \textbf{\textit{Sub}} & \textbf{\textit{Speedup}} \\
    \hline
    \hline
-   \multirow{5}{*}{\textbf{left\_first}} &  \scriptsize{chain}  &  2844 & 3908 &  0.73  & 2588 & 2416 &  \textbf{1.07} \\
-   &  \scriptsize{cycle}  &  5972 & 9364 &  0.64  & 6768 & 6056 &  \textbf{1.12} \\
-   &  \scriptsize{grid}  &  13504 & 15688 &  0.86  & 10140 & 11408 &  \textbf{0.89} \\
-   &  \scriptsize{pyramid}  &  9676 & 13552 &  0.71  & 12764 & 15012 &  \textbf{0.85} \\
-   &  \scriptsize{tree}  &  136 & 160 &  \textbf{0.85}  & 120 & 144 &  0.83 \\
+   \multirow{5}{*}{\textbf{left\_first}} &  \scriptsize{chain  (4096) }  &  2793 & 3869 &  0.72  & 2688 & 2533 &  \textbf{1.06} \\
+   &  \scriptsize{cycle  (4096) }  &  6201 & 9561 &  0.65  & 7260 & 6100 &  \textbf{1.19} \\
+   &  \scriptsize{grid  (64) }  &  15416 & 16003 &  \textbf{0.96}  & 10702 & 11638 &  0.92 \\
+   &  \scriptsize{pyramid  (4096) }  &  9565 & 13849 &  0.69  & 13550 & 13462 &  \textbf{1.01} \\
+   &  \scriptsize{tree  (32768) }  &  140 & 161 &  0.87  & 129 & 142 &  \textbf{0.91} \\
    \hline
-   \multirow{5}{*}{\textbf{left\_last}} &  \scriptsize{chain}  &  2724 & 3996 &  0.68  & 2620 & 2476 &  \textbf{1.06} \\
-   &  \scriptsize{cycle}  &  6188 & 9744 &  0.64  & 6880 & 6104 &  \textbf{1.13} \\
-   &  \scriptsize{grid}  &  13404 & 15688 &  0.85  & 10164 & 11480 &  \textbf{0.89} \\
-   &  \scriptsize{pyramid}  &  2388 & 2920 &  0.82  & 2896 & 2692 &  \textbf{1.08} \\
-   &  \scriptsize{tree}  &  128 & 156 &  0.82  & 116 & 136 &  \textbf{0.85} \\
+   \multirow{5}{*}{\textbf{left\_last}} &  \scriptsize{chain  (4096) }  &  2766 & 3900 &  0.71  & 2666 & 2505 &  \textbf{1.06} \\
+   &  \scriptsize{cycle  (4096) }  &  5724 & 9273 &  0.62  & 7042 & 6394 &  \textbf{1.10} \\
+   &  \scriptsize{grid  (64) }  &  13609 & 15670 &  \textbf{0.87}  & 10801 & 12396 &  \textbf{0.87} \\
+   &  \scriptsize{pyramid  (2048) }  &  2385 & 2958 &  0.81  & 2904 & 3112 &  \textbf{0.93} \\
+   &  \scriptsize{tree  (32768) }  &  133 & 156 &  \textbf{0.85}  & 122 & 145 &  0.84 \\
    \hline
-   \multirow{5}{*}{\textbf{right\_first}} &  \scriptsize{chain}  &  2840 & 2836 &  \textbf{1.00}  & 3344 & 3412 &  0.98 \\
-   &  \scriptsize{cycle}  &  6316 & 7108 &  0.89  & 6652 & 6888 &  \textbf{0.97} \\
-   &  \scriptsize{grid}  &  18061 & 15300 &  \textbf{1.18}  & 15756 & 18165 &  0.87 \\
-   &  \scriptsize{pyramid}  &  12092 & 9804 &  \textbf{1.23}  & 11832 & 11452 &  1.03 \\
-   &  \scriptsize{tree}  &  160 & 184 &  \textbf{0.87}  & 172 & 224 &  0.77 \\
+
+   \multirow{5}{*}{\textbf{right\_first}} &  \scriptsize{chain  (4096) }  &  2830 & 3030 &  0.93  & 3253 & 3434 &  \textbf{0.95} \\
+   &  \scriptsize{cycle  (4096) }  &  6313 & 7012 &  0.90  & 7090 & 6648 &  \textbf{1.07} \\
+   &  \scriptsize{grid  (64) }  &  21318 & 15282 &  \textbf{1.39}  & 16659 & 16091 &  1.04 \\
+   &  \scriptsize{pyramid  (4096) }  &  10348 & 10617 &  0.97  & 12781 & 11677 &  \textbf{1.09} \\
+   &  \scriptsize{tree  (32768) }  &  157 & 180 &  0.87  & 217 & 237 &  \textbf{0.92} \\
    \hline
-   \multirow{5}{*}{\textbf{right\_last}} &  \scriptsize{chain}  &  2812 & 2872 &  0.98  & 3692 & 3644 &  \textbf{1.01} \\
-   &  \scriptsize{cycle}  &  6368 & 6996 &  0.91  & 7528 & 6580 &  \textbf{1.14} \\
-   &  \scriptsize{grid}  &  19777 & 13400 &  \textbf{1.48}  & 18153 & 14260 &  1.27 \\
-   &  \scriptsize{pyramid}  &  10392 & 10472 &  0.99  & 13076 & 11420 &  \textbf{1.15} \\
-   &  \scriptsize{tree}  &  \scriptsize{crashed} & 1244 &  ---  & 416 & 1336 &  \textbf{0.31} \\
+   \multirow{5}{*}{\textbf{right\_last}} &  \scriptsize{chain  (4096) }  &  2864 & 2970 &  0.96  & 4032 & 3672 &  \textbf{1.10} \\
+   &  \scriptsize{cycle  (4096) }  &  6373 & 7036 &  0.91  & 8362 & 6654 &  \textbf{1.26} \\
+   &  \scriptsize{grid  (64) }  &  18346 & 13374 &  1.37  & 19741 & 13286 &  \textbf{1.49} \\
+   &  \scriptsize{pyramid  (4096) }  &  10548 & 10900 &  0.97  & 13496 & 11397 &  \textbf{1.18} \\
+   &  \scriptsize{tree  (65536) }  &  \scriptsize{crashed} & \scriptsize{crashed} &  ---  & 478 & 1458 &  0.33 \\
    \hline
-\multirow{5}{*}{\textbf{double\_first}} &  \scriptsize{chain}  &  4976 & 3536 &  1.41  & 3636 & 2520 &  \textbf{1.44} \\
-&  \scriptsize{cycle}  &  30885 & 25821 &  1.20  & 36122 & 14976 &  \textbf{2.41} \\
-&  \scriptsize{grid}  &  3888 & 2744 &  \textbf{1.42}  & 2496 & 1832 &  1.36 \\
-&  \scriptsize{pyramid}  &  20281 & 14212 &  1.43  & 21353 & 13428 &  \textbf{1.59} \\
-&  \scriptsize{tree}  &  784 & 988 &  \textbf{0.79}  & 716 & 1380 &  0.52 \\
-\hline
-\multirow{5}{*}{\textbf{double\_last}} &  \scriptsize{chain}  &  5100 & 3528 &  \textbf{1.45}  & 3680 & 3048 &  1.21 \\
-&  \scriptsize{cycle}  &  30601 & 20293 &  1.51  & 30469 & 15172 &  \textbf{2.01} \\
-&  \scriptsize{grid}  &  3896 & 2596 &  \textbf{1.50}  & 2492 & 1828 &  1.36 \\
-&  \scriptsize{pyramid}  &  20201 & 14196 &  1.42  & 17549 & 10724 &  \textbf{1.64} \\
-&  \scriptsize{tree}  &  776 & 972 &  \textbf{0.80}  & 704 & 1368 &  0.51 \\
-\hline
+   
+   \multirow{5}{*}{\textbf{double\_first}} &  \scriptsize{chain  (512) }  &  5070 & 3546 &  \textbf{1.43}  & 3626 & 2705 &  1.34 \\
+   &  \scriptsize{cycle  (512) }  &  31053 & 20431 &  1.52  & 36334 & 15141 &  \textbf{2.40} \\
+   &  \scriptsize{grid  (16) }  &  3906 & 2594 &  \textbf{1.51}  & 2762 & 1845 &  1.50 \\
+   &  \scriptsize{pyramid  (512) }  &  22507 & 14176 &  1.59  & 19341 & 11589 &  \textbf{1.67} \\
+   &  \scriptsize{tree  (32768) }  &  773 & 961 &  \textbf{0.80}  & 756 & 1602 &  0.47 \\
+   \hline
+   \multirow{5}{*}{\textbf{double\_last}} &  \scriptsize{chain  (512) }  &  5032 & 3553 &  \textbf{1.42}  & 3638 & 2578 &  1.41 \\
+   &  \scriptsize{cycle  (512) }  &  30991 & 20881 &  1.48  & 31302 & 16918 &  \textbf{1.85} \\
+   &  \scriptsize{grid  (16) }  &  4048 & 2697 &  \textbf{1.50}  & 2510 & 1882 &  1.33 \\
+   &  \scriptsize{pyramid  (512) }  &  20518 & 15255 &  1.35  & 19969 & 10586 &  \textbf{1.89} \\
+   &  \scriptsize{tree  (32768) }  &  766 & 972 &  \textbf{0.79}  & 730 & 1453 &  0.50 \\
+   \hline
+
 
 \hline
 \end{tabular}
