--- a/tables_gain_fib.tex
+++ b/tables_gain_fib.tex
@@ -9,14 +9,14 @@
    \hline
    \hline
 
-   \multirow{3}{*}{\textbf{big}} &  10 &  581 &  15.09  &  16.28  &  11.63 & 12.79 \\
-   &  20 &  581 &  30.23  &  28.58  &  21.58 & 21.98 \\
-   &  5 &  577 &  8.32  &  8.30  &  6.57 & 6.20 \\
+   \multirow{3}{*}{\textbf{big}} &  10 &  581 &  15.09  &  16.28  &  11.63 & \textbf{12.79} \\
+   &  20 &  581 &  30.23  &  28.58  &  21.58 & \textbf{21.98} \\
+   &  5 &  577 &  8.32  &  8.30  &  6.57 & \textbf{6.20} \\
    \hline
-   \multirow{4}{*}{\textbf{fib}} &  30 &  248 &  3.58  &  3.55  &  1.82 & 1.87 \\
-   &  32 &  578 &  \scriptsize{crashed}  &  \scriptsize{crashed}  &  2.00 & 2.05 \\
-   &  35 &  2502 &  \scriptsize{crashed}  &  \scriptsize{crashed}  &  1.96 & 1.94 \\
-   &  36 &  3936 &  \scriptsize{crashed}  &  \scriptsize{crashed}  &  2.02 & 2.24 \\
+   \multirow{4}{*}{\textbf{fib}} &  30 &  248 &  3.58  &  3.55  &  1.82 & \textbf{1.87} \\
+   &  32 &  578 &  \scriptsize{crashed}  &  \scriptsize{crashed}  &  2.00 & \textbf{2.05} \\
+   &  35 &  2502 &  \scriptsize{crashed}  &  \scriptsize{crashed}  &  1.96 & \textbf{1.94} \\
+   &  36 &  3936 &  \scriptsize{crashed}  &  \scriptsize{crashed}  &  2.02 & \textbf{2.24} \\
    \hline
 \hline
 \end{tabular}
