new batch of corrections

--- a/lp_tabling.tex
+++ b/lp_tabling.tex
@@ -403,7 +403,7 @@ Finally, at the end of each clause, the instruction \texttt{new\_answer} is appe
 the new answer operation. This instruction has access to the arguments of a tabled subgoal call,
 thus by dereferencing them it obtains the corresponding answer, which can be added into the table space.    
 
-\subsection{Scheduling Strategies}
+\subsection{Scheduling Strategies}\label{sec:scheduling}
 
 During evaluation of the previous example it is very clear that at several points we can choose between
 different \textit{scheduling} strategies: continue forward execution, backtrack to interior nodes,
