change template a bit

--- a/tese.tex
+++ b/tese.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt,a4paper]{report}
-\usepackage{fcthesis} 
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
+\usepackage{fcthesis} 
 %\usepackage{citesort} % sorts citation numbers appropriately
 \usepackage[]{graphicx}
 \usepackage{url}
@@ -35,8 +35,7 @@
 \submitionplace{Dissertação submetida à Faculdade de Engenharia da \\
     Universidade do Porto como parte dos requisitos para a obtenção do grau de \\
     Mestre em Engenharia Informática e de Computação}
-\department{Departamento de Engenharia Informática \\ Faculdade de
-Engenharia da Universidade do Porto}
+\department{Departamento de Engenharia Informática \\ Faculdade de Engenharia da Universidade do Porto}
 \author{Flávio Manuel Fernandes Cruz}
 \submitdate{Junho de 2010}
 \supervisor{Ricardo Rocha}
